--- a/Clojure.org
+++ b/Clojure.org
@@ -80,7 +80,383 @@ $ lein koan run
 
 #+END_SRC
 
-** Clojure 並發
+** 數據結構
+*** 類型
+**** Nil
+#+NAME:
+#+BEGIN_SRC
+user=> nil
+nil
+#+END_SRC
+
+**** Boolean
+#+NAME:
+#+BEGIN_SRC
+user=> true
+true
+user=> false
+false
+user=> (or true false)
+true
+user=> (and true false)
+false
+user=> (not true)
+false
+user=> (not false)
+true
+#+END_SRC
+
+**** Number
+#+NAME:
+#+BEGIN_SRC
+user=> 1
+1
+user=> 1.0
+1.0
+user=> (+ 1 2)
+3
+user=> (+ 1.0 2.0)
+3.0
+user=> (/ 2 1)
+2
+user=> (* 2 1)
+2
+user=> (- 2 1)
+1
+user=> (max 2 1)
+2
+user=> (min 2 1)
+1
+user=> (< 2 1)
+false
+user=> (> 2 1)
+true
+user=> (= 2 1)
+false
+user=> (pos? 2)
+true
+user=> (zero? 0)
+true
+user=> (neg? 1)
+false
+user=> (number? "1")
+false
+user=> (odd? 2)
+false
+user=> (even? 2)
+true
+user=> (odd? 3)
+true
+#+END_SRC
+
+**** Character
+#+NAME:
+#+BEGIN_SRC
+user=> \a
+\a
+user=> \b
+\b
+#+END_SRC
+
+**** String
+#+NAME:
+#+BEGIN_SRC
+user=> "Walter"
+"Walter"
+user=> (str "hello, " "world")
+"hello, world"
+#+END_SRC
+
+**** KeyWord
+#+NAME:
+#+BEGIN_SRC
+user=> :a
+:a
+user=> :b
+:b
+#+END_SRC
+
+**** Symbol
+#+NAME:
+#+BEGIN_SRC
+user=> (def x 1)
+#'user/x
+#+END_SRC
+
+**** Lists
+#+NAME:
+#+BEGIN_SRC
+user=> '(1 2 3)
+(1 2 3)
+user=> (list 1 2 3)
+(1 2 3)
+user=> (count [1 2 3])
+3
+user=> (map inc [1 2 3])
+(2 3 4)
+user=> (reverse [1 2 3])
+(3 2 1)
+user=> (map + [1 2 3] [3 2 1])
+(4 4 4)
+user=> (apply + [1 2 3])
+6
+user=> (conj [1 2 3] 4)
+[1 2 3 4]
+user=> (cons 4 [1 2 3])
+(4 1 2 3)
+user=> (first [1 2 3])
+1
+user=> (nth [1 2 3] 2)
+3
+user=> (filter odd? [1 2 3])
+(1 3)
+#+END_SRC
+
+**** Vectors
+#+NAME:
+#+BEGIN_SRC
+user=> [1 2 3]
+[1 2 3]
+user=> (vector 1 2 3)
+[1 2 3]
+#+END_SRC
+
+**** Sets
+#+NAME:
+#+BEGIN_SRC
+user=> #{1 2 3}
+#{1 3 2}
+user=> (hash-set 1 2 3)
+#{1 3 2}
+user=> (sorted-set 1 2 3)
+#{1 2 3}
+#+END_SRC
+
+**** Maps
+#+NAME:
+#+BEGIN_SRC
+user=> {:a 1 :b 2 :c 3}
+{:a 1, :b 2, :c 3}
+user=> {:a 1, :b 2, :c 3}
+{:a 1, :b 2, :c 3}
+user=> (hash-map :a 1 :b 2 :c 3)
+{:c 3, :b 2, :a 1}
+user=> (sorted-map :a 1 :b 2 :c 3)
+{:a 1, :b 2, :c 3}
+
+user=> (def fruit {:apple 2, :orange 3})
+#'user/fruit
+user=> fruit
+{:apple 2, :orange 3}
+
+user=> (assoc fruit :apple 5)
+{:apple 5, :orange 3}
+user=> (dissoc fruit :apple)
+{:orange 3}
+
+user=> (get fruit :apple)
+2
+user=> (contains? fruit :apple)
+true
+user=> (contains? fruit :banana)
+false
+user=> (keys fruit)
+(:apple :orange)
+user=> (vals fruit)
+(2 3)
+user=> (doseq [[name num] fruit]
+  #_=>   (prn name num))
+:apple 2
+:orange 3
+nil
+
+user=> (def persons {:name {:first-name "Walter" :last-name "Wang"} :age 18})
+#'user/persons
+user=> persons
+{:name {:first-name "Walter", :last-name "Wang"}, :age 18}
+user=> (get persons :name)
+{:first-name "Walter", :last-name "Wang"}
+user=> (get-in persons [:name :first-name])
+"Walter"
+user=> (get-in persons [:name :last-name])
+"Wang"
+user=> (-> persons :name :last-name)
+"Wang"
+user=> (-> persons :name :first-name)
+"Walter"
+user=> (assoc-in persons [:name :last-name] "Blyss")
+{:name {:first-name "Walter", :last-name "Blyss"}, :age 18}
+user=> (update-in persons [:name :last-name] str "-Blyss")
+{:name {:first-name "Walter", :last-name "Wang-Blyss"}, :age 18}
+#+END_SRC
+
+**** StructMaps
+#+NAME:
+#+BEGIN_SRC
+user=> (def person-struct (create-struct :first-name :last-name))
+#'user/person-struct
+user=> (defstruct person-struct :first-name :last-name)
+#'user/person-struct
+
+user=> (def person-struct (create-struct :first-name :last-name))
+#'user/person-struct
+user=> (def person (struct person-struct "Wang" "Walter"))
+#'user/person
+user=> person
+{:first-name "Wang", :last-name "Walter"}
+
+;; 參考 http://wuchong.me/blog/2015/11/06/learn-clojure-1-datastruct
+
+#+END_SRC
+
+** 基礎語法
+*** 定義函數
+#+NAME:
+#+BEGIN_SRC
+ser=> (def add (fn [a b]
+  #_=>            (+ a b)))
+#'user/add
+user=> (add 1 2)
+3
+user=> (defn add2 [a b]
+  #_=>   (+ a b))
+#'user/add2
+user=> (add2 1 2)
+3
+#+END_SRC
+
+*** 條件控制
+#+NAME:
+#+BEGIN_SRC
+;; if
+user=> (if (> 2 1)
+  #_=>   (prn "yes")
+  #_=>   (prn "no"))
+"yes"
+nil
+
+;; condp
+user=> (defn person-select [num]
+  #_=>   (condp = num
+  #_=>     1 "Walter"
+  #_=>     2 "Wang"
+  #_=>     3 "Blyss"
+  #_=>     (str "no such user")))
+#'user/person-select
+user=> (person-select 1)
+"Walter"
+user=> (person-select 2)
+"Wang"
+user=> (person-select 3)
+"Blyss"
+user=> (person-select 4)
+"no such user"
+
+;; cond
+user=> (defn person-select [num]
+  #_=>   (cond
+  #_=>     (= num 1) "Walter"
+  #_=>     (= num 2) "Wang"
+  #_=>     (= num 3) "Blyss"
+  #_=>     :else "no such user"))
+#'user/person-select
+user=> (person-select 1)
+"Walter"
+user=> (person-select 2)
+"Wang"
+user=> (person-select 3)
+"Blyss"
+user=> (person-select 4)
+"no such user"
+#+END_SRC
+
+*** 循環
+#+NAME:
+#+BEGIN_SRC
+;; dotimes
+user=> (dotimes [num 3]
+  #_=>   (println "num:" num))
+num: 0
+num: 1
+num: 2
+nil
+user=> (dotimes [_ 3]
+  #_=>   (println "hello, world"))
+hello, world
+hello, world
+hello, world
+nil
+
+;; while
+user=> (def cnt 3)
+#'user/cnt
+user=> (while (> cnt 0)
+  #_=>   (print ".")
+  #_=>   (def cnt (dec cnt)))
+...nil
+
+;; 遞迴
+;; 不會進行尾遞歸優化
+user=> (defn add [a b]
+  #_=>   (if (zero? a)
+  #_=>     b
+  #_=>     (add (dec a) (inc b))))
+#'user/add
+user=> (add 1 4)
+5
+;; 會進行尾遞歸優化
+user=> (defn add [a b]
+  #_=>   (if (zero? a)
+  #_=>     b
+  #_=>     (recur (dec a) (inc b))))
+#'user/add
+user=> (add 1 4)
+5
+
+;; loop 和 recur
+(loop [n number factorial 1]
+    (if (zero? n)
+      factorial
+      (recur (dec n) (* factorial n)))))
+#+END_SRC
+
+*** Macro
+#+NAME:
+#+BEGIN_SRC
+;; 反引號 `
+user=> (defmacro my-macro [num]
+  #_=>   `(println (inc ~num)))
+#'user/my-macro
+user=> (my-macro 1)
+2
+nil
+user=> (my-macro 2)
+3
+nil
+
+;; ~ @
+user=> (defmacro my-macro2 [& nums]
+  #_=>   `(println (map inc ~@nums)))
+#'user/my-macro2
+user=> (my-macro2 '(1 2 3))
+(2 3 4)
+nil
+user=> (my-macro2 [1 2 3])
+(2 3 4)
+nil
+
+;; id#
+user=> (defmacro my-macro3 [name]
+  #_=>   `(let [name# ~name]
+  #_=>      (println name#)))
+#'user/my-macro3
+user=> (my-macro3 "walter")
+walter
+nil
+
+;; 參考 http://wuchong.me/blog/2015/11/06/learn-clojure-2-syntax/
+#+END_SRC
+** 並發
 Clojure 處理並發是採用 STM (Software transactional memory)
 
 *** [[https://zh.wikipedia.org/wiki/%E8%BD%AF%E4%BB%B6%E4%BA%8B%E5%8A%A1%E5%86%85%E5%AD%98][軟體事務記憶體]]
@@ -104,7 +480,7 @@ Clojure 處理並發是採用 STM (Software transactional memory)
 理論上，在最糟糕的情況下，當n個並行事務同時執行，他們需要n倍的記憶體和處理器，實際的需要取決於具體的實作細節（比如說一個事務可以儘早的失敗以避免後續額外的開銷）。
 在某些應用場景下，基於Lock機制的演算法會比基於STM機制的演算法更好。
 
-***  類型
+*** 類型
 **** Vars
 #+NAME:
 #+BEGIN_SRC
